Notes/Kubernetes/CKA-PREP/create_pod.yml
apiVersion: v1
kind: pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
containers:
  - name: firstcontainer
    image: coolgourav147/nginx-custom
  - name: secondcontainer
    image: coolgourav147/nginx-custom
apiVersion: v1
kind: pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
containers:
  - name: firstcontainer
    image: coolgourav147/nginx-custom
    resources:
      requests:
        memory: 100Mi   # 200M OR 200Mi, for gb it is Gi
        cpu: 100m       # 0.1  
      limits:
        memory: 200Mi
        cpu: 200m
  - name: secondcontainer
    image: coolgourav147/nginx-custom
apiVersion: v1
kind: pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  containers:

    # INJECT PARTICULAR KEY INSIDE A CONFIGMAP
    - name: firstcontainer
      image: coolgourav147/nginx-custom
    - name: secondcontainer
      image: coolgourav147/nginx-custom
    - name: thirdcontainer
      image: coolgourav147/nginx-custom
      volumeMounts:
       - name: <volume name> # this should be same as the name of the volume
         mountPath: "/config" # the values will be visible in this location  
         readOnly: true
  volumes:
    - name: <volume name>
      configMap:
        name: <configmap name>


##############################################################################################


# PASSING SECRETS INSIDE A POD

apiVersion: v1
kind: Pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  containers:

    # FETCHING A PARTICULAR KEY FROM THE SECRET AND PASS AS CUSTOM ENVIRONMENT VARIABLE
    - name: firstcontainer
      image: coolgourav147/nginx-custom
    - name: secondcontainer
      image: coolgourav147/nginx-custom
    - name: thirdcontainer
      image: coolgourav147/nginx-custom
      volumeMounts:
        - mountPath: /secrets   # this is the path where the files will be mounted inside containers
          name: <volume name>

  volumes:
    - name: <volume name>
      secret:
        secretName: myenvsecret
        
##################################################################################################################


# ADDING TOLERANCE PROPERTIES
# assuming that this taint is applied on node
# kubectl taint node <node name> mysize=large:NoSchedule
# If the tolerance matches with the taint specified on the node, then only it will be allowed on that node, otherwise it will be scheduled on other nodes


# USING EQUAL OPERATOR
# When the operator is set to Equal, the pod will tolerate a taint only if both the key and value of the taint match what is specified in the toleration. You must specify both key and value when using operator: Equal.
# Use Case: This is useful when you want to ensure that the pod is scheduled on nodes with a taint that has a precise key-value pair.

apiVersion: v1
kind: pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom
  tolerations:
    - effect: "NoSchedule"
      key: "mysize"
      operator: "Equal"
      value: "large"


# USING EXISTS OPERATOR
# When the operator is set to Exists, the pod will tolerate any taint that has a matching key, regardless of the taint’s value. The toleration does not specify a value field when operator: Exists is used.
# Use Case: This is used when you don't care about the taint's value but want to ensure the pod can be scheduled on a node with a specific taint key.

apiVersion: v1
kind: pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom
  tolerations:
    - effect: "NoSchedule"
      key: "mysize"
      operator: "Exists"



# IF OPERATOR IS EXISTS AND NO KEY SPECIFIED & NO EFFECT SPECIFIED
# THIS WILL ALLOW POD TO TOLERATE ANYKIND OF TAINT, INSHORT IT WILL BYPASS ALL KINDS OF TAINTS

tolerations:
  - effect: ""
    key: ""
    operator: "Exists"


# The tolerationSeconds field in a Kubernetes toleration specifies the amount of time that a pod will continue to run on a node after the node has acquired a new taint that the pod does not already tolerate. 
# This field is only applicable to the NoExecute effect.
# Usecase: This mechanism is useful for giving administrators and systems some time to handle the taint effects, possibly to clean up or save the state before the pod is terminated.

tolerations:
  - effect: "NoExecute"
    key: "mysize"
    operator: "Equal"
    value: "large"
    tolerationSeconds: 60


##################################################################################################################################################################################################################################

# NODE SELECTOR
# THIS LETS US CHOOSE THAT THE PODS SHOULD BE CREATED ON A PARTICULAR NODE WHERE A PARTICULAR LABEL IS ATTACHED
# LIMITATIONS: Suppose there are three nodes with label size=small, size=medium & size=large respectively & we want to deploy pods only on nodes where size is either small or large. This can't be done with nodeSelector

# EXAMPLE- kubectl label nodes <node name> size=large

apiVersion: v1
kind: Pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  nodeSelector:
    size: "large"   # ONLY 1 LABEL CAN BE ADDED WHICH IS ONE OF THE LIMITATION OF NODE SELECTOR
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom
apiVersion: v1
kind: Pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
        - preference:
            matchExpressions:
              - key: "size"
                operator: "In"
                values:
                  - "extrasmall"
        weight: 1  # usefull when multiple affinities are defined
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom


# this will create a pod in the nodes only if the label value matches any of the values specified here
apiVersion: v1
kind: Pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: "size"
                operator: "In"
                values:
                  - "large"
                  - "small"
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom

###########################################################################################3



# VOLUMES IN KUBERNETES


# VOLUME INSIDE A POD
#An emptyDir volume is created when a Pod is assigned to a Node. It remains as long as that Pod is running on that Node. The data in an emptyDir volume can be shared between containers in the same Pod.
#The emptyDir volume starts empty and can be used to store transient data that you don’t want to persist beyond the lifetime of the Pod. For instance, cache data, workspaces for processing data, etc.
#If the Pod is removed from the Node for any reason, the data in the emptyDir is deleted forever.

apiVersion: v1
kind: pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom
      volumeMounts:
        - mountPath: /data
          name: first-volume
    - name: secondcontainer
      image: coolgourav147/nginx-custom
  volumes:
    - name: first-volume
      emptyDir: {}


# VOLUME ON A NODE HOST ( SO THAT THE DATA IS SAFE EVEN IF POD IS DESTROYED )
# LIMITATION: Suppose the volume is on node1 and the pod scheduled on node2, then this will not work, this will work perfectly in single node cluster
# FOR ELIMINATING THIS LIMITATION, USE PERSISTENT VOLUMES
apiVersion: v1
kind: pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom
      volumeMounts:
        - mountPath: /data
          name: first-volume
  volumes:
    - name: first-volume
      hostPath:
        path: /tmp/data



  
# VOLUME ON A EXTERNAL SERVICE ( SO THAT THE DATA IS SAFE EVEN IF POD IS DESTROYED && SUPPORTS MULTINODE CLUSTER )
# There are many external services that can be integrated, the example below is for Amazon EBS
apiVersion: v1
kind: Pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom
      volumeMounts:
        - mountPath: /data
          name: first-volume
  volumes:
    - name: first-volume
      awsElasticBlockstore:
        volumeID: <volume-id>
        fsType: ext4      


###############################################################################################################################

# POD WITH  COMMANDS & ARGUMENTS

apiVersion: v1
kind: Pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom
      command: ["sleep"] # this overrides any ENTRYPOINT instruction in the dockerfile
      args: ["10"]  # this gets appended to the ENTRYPOINT in the dockerfile , e.g. ENTRYPOINT ["sleep"]
apiVersion: v1
kind: Pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom
      command: 
        - "sleep"
        - "1200"
apiVersion: v1
kind: Pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom
    - name: secondcontainer
      image: myprivateregistry.com:5000/nginx-custom  
  imagePullSecrets:
    - name: regcred


################################################################################################################################

# KUBERNETES SECURITY CONTEXT
# A Security Context in Kubernetes defines privileges and access controls for a pod or a container. 
# It sets specific rules for how the container or pod should run, like which user it runs as, whether it can access certain files, or if it should run in a secure way.

# Pass security context on pod level
apiVersion: v1
kind: Pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  securityContext:
    runAsUser: 1000 # USER ID
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom
    - name: secondcontainer
      image: myprivateregistry.com:5000/nginx-custom  
apiVersion: v1
kind: Pod
metadata:
  name: firstpod
  labels:
    type: apiapp
spec:
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom
      securityContext:
        runAsUser: 1000 # USER ID

# If scheduler isnt working in your cluster or you strictly want to run your pod on a particular node
apiVersion: v1
kind: Pod
metadata:
  name: my-app
spec:
  nodeName: worker-node-01  # Replace with your actual node name
  containers:
  - name: nginx
    image: nginx:latest
