Notes/Kubernetes/CKA-PREP/create_priorityclass.yaml
# What is priority class?
# Priority class is a way to set the priority of a pod.
# It is used to ensure that certain pods are given higher priority over others.

# PriorityClass also has two optional fields: globalDefault and description. 
#The globalDefault field indicates that the value of this PriorityClass should be used for Pods without a priorityClassName. 
# Only one PriorityClass with globalDefault set to true can exist in the system. If there is no PriorityClass with globalDefault set, the priority of Pods with no priorityClassName is zero.

# Create priority class
apiVersion: scheduling.k8s.io/v1
kind: PriorityClass
metadata:
  name: high-priority
value: 1000000
globalDefault: false
description: "This priority class should be used for XYZ service pods only."


# using priority class in pod definition
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx
  priorityClassName: high-priority


  # What is preemption?
  # When Pods are created, they go to a queue and wait to be scheduled. 
  # The scheduler picks a Pod from the queue and tries to schedule it on a Node. 
  # If no Node is found that satisfies all the specified requirements of the Pod, preemption logic is triggered for the pending Pod. Let's call the pending Pod P. 
  # Preemption logic tries to find a Node where removal of one or more Pods with lower priority than P would enable P to be scheduled on that Node. 
  # If such a Node is found, one or more lower priority Pods get evicted from the Node. 
  # After the Pods are gone, P can be scheduled on the Node.
  # Important: If you dont want the higher priority pods to kill the lower priority pods, then you can set the 'preemptionPolicy: Never' in the priority class yaml file.
