Notes/Kubernetes/CKA-PREP/create_service_accounts.yaml
# This is when we want to create a SA and mount it manually into pod

apiVersion: v1
kind: ServiceAccount
metadata:
  name: build-robot
...

apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - mountPath: /var/run/secrets/tokens
      name: vault-token
  serviceAccountName: build-robot
  automountServiceAccountToken: false #(if you want to disable auto renewal of SA token)
  volumes:
  - name: vault-token
    projected:
      sources:
      - serviceAccountToken:
          path: vault-token
          expirationSeconds: 7200
          audience: vault
