Notes/Kubernetes/CKA-PREP/create_ingress.yml
# Reference: https://kubernetes.io/docs/concepts/services-networking/ingress
#            https://kubernetes.github.io/ingress-nginx/examples/

# Most Popular Ingress Controllers
# GCP HTTPS LOAD BALANCER
# NGINX
# CONTOUR
# HAPROXY
# TRAEFIK
# ISTIO

# NOTE: WE WILL FOCUS ON NGINX INGRESS 

# An ingress controller is just like a load balancer, but this is completely managed by kubernetes
# Usecases
# 1. If user hits www.my-online-store.com it redirects traffic to a specific pod
# 2. It can also do path based routing. If user hits www.my-online-store.com/wear, it should go to clothes application && If user hits www.my-online-store.com/watch, it should go to movies application
# 3. It can also do subdomain based routing. If user hits wear.my-online-store.com, it goes to clothes app && if user hits watch.my-online-store.com, it goes to movies app  


# For the setup of a nginx ingress we need, these are pre-requisites
# 1. A deployment for the ingress pod
# 2. A service to expose it
# 3. A configmap to feed nginx configuration data
# 4. A service account with the right permissions to access all of these objects


kind: ConfigMap
apiVersion: v1
metadata:
  name: nginx-configuration



####################################

apiVersion: v1
kind: ServiceAccount
metadata:
  name: nginx-ingress-serviceaccount


####################################

apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-ingress-controller

spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
      
      # Must pass this command to start the nginx
      args:
        - /nginx-ingress-controller
        - --configmap=${POD_NAMESPACE}/nginx-configuration # create a config map which includes things like ssl protocls, keep alive etc, so that it is easier to manage at one place

      ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443


#############################################

apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: Nodeport
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    name: nginx-ingress


############################################
############################################
############################################


# Now CREATING THE MAIN NGINX INGRESS RESOURCE



# USECASE 1
# If user hits www.my-online-store.com it redirects traffic to a specific pod

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  # Backend section defines where the traffic is routed to
  backend:
    service:
      name: wear-service
      port: 
        number: 80



# USECASE 2
# It can also do path based routing. If user hits www.my-online-store.com/wear, it should go to clothes application && If user hits www.my-online-store.com/watch, it should go to movies application

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /wear
          pathType: Prefix
          backend:
            service:
              name: wear-service
              port: 
                number: 80
        - path: /watch
          pathType: Prefix
          backend:
            service:
              name: watch-service
              port: 
                number: 80


# USECASE 3
# It can also do subdomain based routing. If user hits wear.my-online-store.com, it goes to clothes app && if user hits watch.my-online-store.com, it goes to movies app  

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:

  - host: wear.my-online-store.com
    http:
      paths:
        backend:
            service:
              name: wear-service
              port: 
                number: 80

  - host: watch.my-online-store.com
    http:
      paths:      
        backend:
            service:
              name: watch-service
              port: 
                number: 80

########################################################

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: ingress-wildcard-host
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - foo.bar.com
    secretName: testsecret-tls
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: service1
            port:
              number: 80
  - host: "*.foo.com"
    http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: service2
            port:
              number: 80
